compiling_error.txt
D:\workyworky\NearestNeighbor-GPU\nns.cpp: In lambda function:
D:\workyworky\NearestNeighbor-GPU\nns.cpp:58:30: error: expected '{' before ';' token
                 to_do = [i,j];
                              ^
D:\workyworky\NearestNeighbor-GPU\nns.cpp: In function 'void NSS(const list_t&, std::size_t, callback_list_t)':
D:\workyworky\NearestNeighbor-GPU\nns.cpp:58:30: error: no match for 'operator=' (operand types are 'compound_t {aka std::array<unsigned int, 2u>}' and 'NSS(const list_t&, std::size_t, callback_list_t)::<lambda()>')
In file included from D:\workyworky\NearestNeighbor-GPU\nns.cpp:1:0:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note: candidate: std::array<unsigned int, 2u>& std::array<unsigned int, 2u>::operator=(const std::array<unsigned int, 2u>&)
     struct array
            ^~~~~
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note:   no known conversion for argument 1 from 'NSS(const list_t&, std::size_t, callback_list_t)::<lambda()>' to 'const std::array<unsigned int, 2u>&'
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note: candidate: std::array<unsigned int, 2u>& std::array<unsigned int, 2u>::operator=(std::array<unsigned int, 2u>&&)
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note:   no known conversion for argument 1 from 'NSS(const list_t&, std::size_t, callback_list_t)::<lambda()>' to 'std::array<unsigned int, 2u>&&'
D:\workyworky\NearestNeighbor-GPU\nns.cpp: In function 'int main()':
D:\workyworky\NearestNeighbor-GPU\nns.cpp:74:37: warning: invalid conversion from 'void (*)(output_t&) {aka void (*)(std::vector<std::array<unsigned int, 2u> >&)}' to 'callback_list_t {aka void (*)(std::vector<std::array<unsigned int, 2u> >)}' [-fpermissive]
     NSS(test, thersh, printsomestuff);
                                     ^
D:\workyworky\NearestNeighbor-GPU\nns.cpp:43:6: note:   initializing argument 3 of 'void NSS(const list_t&, std::size_t, callback_list_t)'
 void NSS(const list_t& L, size_t t, callback_list_t f)  {
      ^~~
